data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1698.wast
;; 9. **Test Br_if in If-Else Structure with Incorrect Condition**:    - **Description**: Use `br_if` within an `if-else` construct with an invalid i32 condition.    - **Constraint**: Condition checks within control structures must resolve accurately to maintain logical flow.    - **Incorrect Condition Evaluation**: The `br_if` evaluates a condition incorrectly, leading to false jumps or skip overs in `if-else`.

(assert_invalid
  (module
    (func $br_if_invalid_condition (param i32) (result i32)
      (local.get 0)
      (if (result i32)
        (then
          (i32.const 5)
          (br_if 0 (i64.const 1))
        )
        (else
          (i32.const 10)
        )
      )
    )
  )
  "type mismatch"
)